# motors

./: CMakeLists.txt
src/drivers/dm/: CMakeLists.txt
src/drivers/evo/: CMakeLists.txt
src/motors/: CMakeLists.txt  package.xml
src/motors/config/: motors.yaml
src/motors/launch/: motors_spec_msg.launch.py
src/motors/src/: SocketCAN.cpp  SocketCAN.hpp  close_chain_mapping.cpp  close_chain_mapping.hpp  dm_motor_driver.cpp  dm_motor_driver.hpp  evo_motor_driver.hpp  motor_driver.cpp  motor_driver.hpp  motors_node.cpp  motors_node.hpp  timer.hpp  utils.hpp
src/motors/srv/: ControlMotor.srv
src/protocol/can/: socket_can.cpp
